# mine

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-upload-to-release.yaml  denorelease.yaml  release.yaml  rust.yml  rust2.yaml
src/: colors.rs  get_project_dir_path.rs  lib.rs  main.rs  project_root_detection.rs
