[package]
name = "mine"
version = "0.1.19"
authors = ["Joel Zandén <joel@zanden.xyz>"]
description = "CLI for color-coding project windows, enhancing workspace organization"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
dirs = { version = "5.0.0", default-features = false }
serde_json = { version = "1.0.94", default-features = false }
rand = "0.8.5"
json-patch = { version = "0.3.0", default-features = false }
serde = { version = "1.0.158", default-features = false }
